--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ CLAUDE.md
 # env file and personal learning guide
 .env
 LEARNING_GUIDE.md
+
+# SQL migration files (local development only)
+add_comment_user_id.sql
+add_tags_column.sql
+add_tags_column.sql.backup
+*.sql.backup
